# unicodeTranslator

./: CHANGELOG.md  LICENSE  README.md  unicodeAlec.cabal
app/: Main.hs
